--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,13 +1,279 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="zxx">
 <head>
-    <meta charset="UTF-8">
-    <title>Admin</title>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="Site keywords here">
+    <meta name="description" content="">
+    <meta name="copyright" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Medikit - Medical and Doctor HTML Template.</title>
+
+    <link rel="icon" href="/img/favicon.png">
+
+    <link href="/css/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="/css/nice-select.css">
+
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="/css/icofont.css">
+
+    <link rel="stylesheet" href="/css/slicknav.min.css">
+
+    <link rel="stylesheet" href="/css/owl-carousel.css">
+
+    <link rel="stylesheet" href="/css/datepicker.css">
+
+    <link rel="stylesheet" href="/css/animate.min.css">
+
+    <link rel="stylesheet" href="/css/magnific-popup.css">
+
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/responsive.css">
+
+    <link rel="stylesheet" href="/css/color/color1.css">
+    <link rel="stylesheet" href="#" id="colors">
 </head>
 <body>
-Welcome Admin
-<a href="/patient">See Patients</a>
-<a href="/doctor">See Doctors</a>
-/
+
+<div class="preloader">
+    <div class="loader">
+        <div class="loader-outter"></div>
+        <div class="loader-inner"></div>
+        <div class="indicator">
+            <svg width="16px" height="12px">
+                <polyline id="back" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+                <polyline id="front" points="1 6 4 6 6 11 10 1 12 6 15 6"></polyline>
+            </svg>
+        </div>
+    </div>
+</div>
+
+
+<div class="color-plate">
+    <a class="color-plate-icon"><i class="fa fa-cog fa-spin"></i></a>
+    <h4>Medikit</h4>
+    <p>Here is some awesome color's available on Medikit Template.</p>
+    <span class="color1"></span>
+    <span class="color2"></span>
+    <span class="color3"></span>
+    <span class="color4"></span>
+    <span class="color5"></span>
+    <span class="color6"></span>
+    <span class="color7"></span>
+    <span class="color8"></span>
+    <span class="color9"></span>
+    <span class="color10"></span>
+    <span class="color11"></span>
+    <span class="color12"></span>
+</div>
+
+
+<header class="header">
+    <div class="header-inner">
+        <div class="container">
+            <div class="inner">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-12">
+
+                        <div class="logo">
+                            <a href="index.html"><img src="/img/logo.png" alt="#"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</header>
+
+
+<div class="breadcrumbs overlay">
+    <div class="container">
+        <div class="bread-inner">
+            <div class="row">
+                <div class="col-12">
+                    <h2>Welcome Admin</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<section class="contact-us section">
+    <div class="container">
+        <div class="contact-info">
+            <div class="row">
+
+                <div class="col-lg-4 col-12 ">
+                    <div class="single-info" onclick="redirectToDoctor()">
+                        <i class="icofont icofont-wall-clock"></i>
+                        <div class="content">
+                            <h3>Doctors</h3>
+                            <p><a href="/doctor"></a></p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-12">
+                    <div class="single-info" onclick="redirectToPatient()">
+                        <i class="icofont icofont-wall-clock"></i>
+                        <div class="content">
+                            <h3>Patients</h3>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-12 ">
+                    <div class="single-info" onclick="redirectToMedicalServices()">
+                        <i class="icofont icofont-wall-clock"></i>
+                        <div class="content">
+                            <h3>Medical Services</h3>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<footer id="footer" class="footer ">
+
+    <div class="footer-top">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-footer">
+                        <h2>About Us</h2>
+                        <p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore dolore magna.</p>
+
+                        <ul class="social">
+                            <li><a href="#"><i class="icofont-facebook"></i></a></li>
+                            <li><a href="#"><i class="icofont-google-plus"></i></a></li>
+                            <li><a href="#"><i class="icofont-twitter"></i></a></li>
+                            <li><a href="#"><i class="icofont-vimeo"></i></a></li>
+                            <li><a href="#"><i class="icofont-pinterest"></i></a></li>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-footer f-link">
+                        <h2>Quick Links</h2>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-12">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Home</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Services</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Our Cases</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Other Links</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-12">
+                                <ul>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Consuling</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Finance</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Testimonials</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>FAQ</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Contact Us</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-footer">
+                        <h2>Newsletter</h2>
+                        <p>subscribe to our newsletter to get allour news in your inbox.. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-12">
+                    <div class="copyright-content">
+                        <p>© Copyright 2018 | All Rights Reserved by <a href="https://www.wpthemesgrid.com" target="_blank">wpthemesgrid.com</a> </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</footer>
+
+
+<script data-cfasync="false" src="/js/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="/js/jquery.min.js"></script>
+
+<script src="/js/jquery-migrate-3.0.0.js"></script>
+
+<script src="/js/jquery-ui.min.js"></script>
+
+<script src="/js/easing.js"></script>
+
+<script src="/js/colors.js"></script>
+
+<script src="/js/popper.min.js"></script>
+
+<script src="/js/bootstrap-datepicker.js"></script>
+
+<script src="/js/jquery.nav.js"></script>
+
+<script src="/js/slicknav.min.js"></script>
+
+<script src="/js/jquery.scrollUp.min.js"></script>
+
+<script src="/js/niceselect.js"></script>
+
+<script src="/js/tilt.jquery.min.js"></script>
+
+<script src="/js/owl-carousel.js"></script>
+
+<script src="/js/jquery.counterup.min.js"></script>
+
+<script src="/js/wow.min.js"></script>
+
+<script src="/js/jquery.magnific-popup.min.js"></script>
+
+<script src="/js/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+
+<script src="https://maps.google.com/maps/api/js?key=AIzaSyDGqTyqoPIvYxhn_Sa7ZrK5bENUWhpCo0w"></script>
+
+<script src="/js/gmaps.min.js"></script>
+
+<script src="/js/map-active.js"></script>
+<script>
+    function redirectToPatient() {
+        window.location.href = "/patient";
+    }
+    function redirectToDoctor() {
+        window.location.href = "/doctor";
+    }
+
+    function redirectToMedicalServices() {
+        window.location.href = "/medicalServices";
+    }
+</script>
+
+<script src="/js/bootstrap.min.js"></script>
+
+<script src="/js/main.js"></script>
+<script defer="" src="/js/beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816" integrity="sha512-jGCTpDpBAYDGNYR5ztKt4BQPGef1P0giN6ZGVUi835kFF88FOmmn8jBQWNgrNd8g/Yu421NdgWhwQoaOPFflDw==" data-cf-beacon='{"rayId":"7d0557abdf433362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}' crossorigin="anonymous"></script>
 </body>
 </html>
