--- a/src/main/resources/templates/customLogin.html
+++ b/src/main/resources/templates/customLogin.html
@@ -1,6 +1,5 @@
-
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="zxx"  xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta charset="utf-8">
@@ -218,6 +217,7 @@
                         <p>Didn't you account yet ? <a href="register.html">Register Here</a></p>
 
                         <form class="form" method="post" action="/login">
+                            <p th:if="${errorMessage != null}" th:text="${errorMessage}" style="color: red; margin-bottom: 0"></p>
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
@@ -236,6 +236,7 @@
                                     </div>
                                     <a href="/patient/register">Register</a>
                                 </div>
+                            </div>
                         </form>
 
                     </div>
