--- a/src/main/resources/templates/patientAppointments.html
+++ b/src/main/resources/templates/patientAppointments.html
@@ -157,7 +157,7 @@
             <div class="col-lg-6  col-12">
 
                 <div class="subscribe-form ">
-                    <a th:href="@{/appointments/add}" class="btn">Create Appointment</a>
+                    <a th:href="@{/appointments/add}" class="btn">Book Appointment</a>
                 </div>
 
             </div>
