--- a/src/main/resources/templates/addAppointment.html
+++ b/src/main/resources/templates/addAppointment.html
@@ -107,7 +107,7 @@
                     <div class="title">
                         <h3>Book your appointment</h3>
                     </div>
-                    <form  action="/appointments/add" method="post">
+                    <form  action="/appointments/make" method="post">
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-12">
                                 <div class="form-group">
@@ -133,7 +133,7 @@
                             <div class="col-12">
                                 <div class="form-group">
                                     <div style="margin-top: 30px; margin-right: 100px" class="button">
-                                        <button type="submit" class="btn">Book An Appointment</button>
+                                        <button type="submit" class="btn">Book  Appointment</button>
                                     </div>
                                 </div>
                             </div>
