--- a/src/main/resources/templates/patientAppointments.html
+++ b/src/main/resources/templates/patientAppointments.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="zxx" xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta charset="utf-8">
@@ -157,7 +157,7 @@
             <div class="col-lg-6  col-12">
 
                 <div class="subscribe-form ">
-                    <a th:href="@{/appointments/add}" class="btn">Book Appointment</a>
+                    <a th:href="@{/appointments/make}" class="btn"><span style="color: white">Book Appointment</span></a>
                 </div>
 
             </div>
