--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -276,7 +276,7 @@
                                 </div>
                                 <div class="col-12">
                                     <div class="form-group login-btn">
-                                        <button class="btn" type="submit">Login</button>
+                                        <button class="btn" type="submit">Register</button>
                                     </div>
                                 </div>
                             </div>
