appointment_online_book, doctor_patient_account_with_email, doctor_patient_forgot_password

--- a/src/main/resources/templates/changePasswordPage.html
+++ b/src/main/resources/templates/changePasswordPage.html
@@ -1,5 +1,5 @@
-﻿<!doctype html>
-<html class="no-js" lang="zxx" xmlns:th="http://www.thymeleaf.org">
+<!doctype html>
+<html class="no-js" lang="zxx"  xmlns:th="http://www.thymeleaf.org">
 <head>
 
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
 
     <link rel="icon" href="/img/favicon.png">
 
-    <link href="/../../css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
+    <link href="../../css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
           rel="stylesheet">
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -36,7 +36,6 @@
 
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style.css">
-
     <link rel="stylesheet" href="/css/responsive.css">
 
     <link rel="stylesheet" href="/css/color/color1.css">
@@ -77,18 +76,16 @@
     <span class="color11"></span>
     <span class="color12"></span>
 </div>
-
-
 <div class="breadcrumbs overlay">
     <div class="container">
         <div class="bread-inner">
             <div class="row">
                 <div class="col-12">
-                    <h2>Get Your Appointment</h2>
+                    <h2>Confirm Email</h2>
                     <ul class="bread-list">
                         <li><a href="index.html">Home</a></li>
                         <li><i class="icofont-simple-right"></i></li>
-                        <li class="active">Appointment</li>
+                        <li class="active">Confirm Email</li>
                     </ul>
                 </div>
             </div>
@@ -97,73 +94,48 @@
 </div>
 
 
-<section class="appointment single-page">
+<section class="login section">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-7 col-md-12 col-12">
-                <div class="appointment-inner">
-                    <div class="title">
-                        <h3>Book your appointment</h3>
+        <div class="inner">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="login-left">
                     </div>
-                    <form action="/appointments/make" method="post">
-                        <div class="row">
-                            <div class="col-lg-6 col-md-6 col-12">
-                                <div class="form-group">
-                                    <p style="margin-bottom: 0">Date for Appointment</p>
-                                    <input name="startTime" type="datetime-local" placeholder="Description">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-6 col-12">
-                                <p style="margin-bottom: 0">Choose Doctor</p>
-
-                                <select name="doctor.id">
-                                    <option th:each="doctor: ${doctors}"
-                                            th:text="${doctor.name}" th:value="${doctor.getId()}"></option>
-                                </select>
-
-                               <select name="registerType">
-                                   <option th:value="ONLINE">ONLINE</option>
-                                   <option th:value="OFFLINE">OFFLINE</option>
-                               </select>
-                            </div>
-                            <div style="margin-left: 2px" class="row">
-                                <div class="col-lg-6 col-md-6 col-12">
-                                    <div class="form-group">
-                                        <p style="margin-bottom: 0">Write about your complaint</p>
-                                        <input name="description" type="text" placeholder="Description">
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="form-group">
-                                            <div style="margin-top: 30px; margin-right: 100px" class="button">
-                                                <button type="submit" class="btn">Book Appointment</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
                 </div>
-            </div>
-            <div class="col-lg-5 col-md-12 ">
-                <div class="work-hour">
-                    <h3>Working Hours</h3>
-                    <ul class="time-sidual">
-                        <li class="day">Monday <span>8.00-18.00</span></li>
-                        <li class="day">Tuesday <span>8.00-18.00</span></li>
-                        <li class="day">Wednesday <span>8.00-18.00</span></li>
-                        <li class="day">Thursday <span>8.00-18.00</span></li>
-                        <li class="day">Friday <span>8.00-18.00</span></li>
-                        <li class="day">Saturday <span>8.00-18.00</span></li>
-                    </ul>
+                <div class="col-lg-6">
+                    <div class="login-form">
+                        <h2>Eamil Here</h2>
+                        <form class="form" method="post" action="/patient/changePassword">
+                            <input name="email" type="hidden" th:value="${token}">
+                            <input name="token" type="hidden" th:value="${email}">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="text" name="password" placeholder="Your Password">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="text" name="passwordRepeat" placeholder="Repeat Password">
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-group login-btn">
+                                        <button class="btn" type="submit">Submit</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+
 <footer id="footer" class="footer ">
+
     <div class="footer-top">
         <div class="container">
             <div class="row">
@@ -260,7 +232,7 @@
 </footer>
 
 
-<script data-cfasync="false" src="/../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+<script data-cfasync="false" src="/js/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
 <script src="/js/jquery.min.js"></script>
 
 <script src="/js/jquery-migrate-3.0.0.js"></script>
@@ -295,14 +267,14 @@
 
 <script src="/js/jquery.magnific-popup.min.js"></script>
 
-<script src="/../../ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+<script src="/js/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 
 <script src="/js/bootstrap.min.js"></script>
 
 <script src="/js/main.js"></script>
-<script defer="" src="/../../beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816"
+<script defer="" src="/js/beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816"
         integrity="sha512-jGCTpDpBAYDGNYR5ztKt4BQPGef1P0giN6ZGVUi835kFF88FOmmn8jBQWNgrNd8g/Yu421NdgWhwQoaOPFflDw=="
-        data-cf-beacon='{"rayId":"7d05577b2ff73362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}'
+        data-cf-beacon='{"rayId":"7d055790fe8d3362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}'
         crossorigin="anonymous"></script>
 </body>
 </html>
