--- a/src/main/resources/templates/updatePatient.html
+++ b/src/main/resources/templates/updatePatient.html
@@ -140,7 +140,7 @@
 
                     <div class="col-12">
                         <div class="form-group login-btn">
-                            <button class="btn" type="submit">Login</button>
+                            <button class="btn" type="submit">Update</button>
                         </div>
                     </div>
                 </div>
