--- a/src/main/resources/templates/addDoctor.html
+++ b/src/main/resources/templates/addDoctor.html
@@ -138,21 +138,24 @@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="surname" placeholder="Last Name" required="">
-                                        <p th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" style="color: red;"></p>
+                                        <p th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"
+                                           style="color: red;"></p>
                                     </div>
                                 </div>
 
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="email" placeholder="Email" required="">
-                                        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color: red;"></p>
+                                        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"
+                                           style="color: red;"></p>
 
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="password" name="password" placeholder="Password" required="">
-                                        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red;"></p>
+                                        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+                                           style="color: red;"></p>
 
                                     </div>
                                 </div>
@@ -160,14 +163,16 @@
                                     <div class="form-group">
                                         <p style="margin-bottom: 0">Birthday</p>
                                         <input type="date" name="birthDate" placeholder="Birthday" required="">
-                                        <p th:if="${#fields.hasErrors('birthDate')}" th:errors="*{birthDate}" style="color: red;"></p>
+                                        <p th:if="${#fields.hasErrors('birthDate')}" th:errors="*{birthDate}"
+                                           style="color: red;"></p>
 
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <input type="text" name="speciality" placeholder="Speciality" required="">
-                                        <p th:if="${#fields.hasErrors('speciality')}" th:errors="*{speciality}" style="color: red;"></p>
+                                        <p th:if="${#fields.hasErrors('speciality')}" th:errors="*{speciality}"
+                                           style="color: red;"></p>
 
                                     </div>
                                 </div>
@@ -178,28 +183,39 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
+                                        <input type="text" name="zoomId" placeholder="zoomId" required="">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="text" name="zoomPassword" placeholder="zoomPassword" required="">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
                                         <input type="file" name="image" placeholder="Select Image" required="">
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-12">
                                     <p style="margin-bottom: 0">Departments</p>
-                                   <select name="department.id">
-                                    <option th:each="department: ${departments}"
-                                            th:text="${department.getDepartments()}" th:value="${department.id}"></option>
-                                </select>
+                                    <select name="department.id">
+                                        <option th:each="department: ${departments}"
+                                                th:text="${department.getDepartments()}"
+                                                th:value="${department.id}"></option>
+                                    </select>
                                 </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-group login-btn">
+                                    <button class="btn" type="submit">Register Doctor</button>
                                 </div>
-                                <div class="col-12">
-                                    <div class="form-group login-btn">
-                                        <button class="btn" type="submit">Register Doctor</button>
-                                    </div>
-                                    <div class="checkbox">
-                                        <label class="checkbox-inline" for="2"><input name="news" id="2"
-                                                                                      type="checkbox">Yes, I agree with
-                                            all</label>
-                                    </div>
-                                    <a href="#" class="terms">Terms & Conditions</a>
+                                <div class="checkbox">
+                                    <label class="checkbox-inline" for="2"><input name="news" id="2"
+                                                                                  type="checkbox">Yes, I agree with
+                                        all</label>
                                 </div>
+                                <a href="#" class="terms">Terms & Conditions</a>
+                            </div>
                         </form>
 
                     </div>
