--- a/src/main/resources/templates/searchDoctors.html
+++ b/src/main/resources/templates/searchDoctors.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="zxx" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -14,7 +13,8 @@
 
     <link rel="icon" href="/img/favicon.png">
 
-    <link href="/css/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+    <link href="../../css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
+          rel="stylesheet">
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 
@@ -39,6 +39,8 @@
     <link rel="stylesheet" href="/css/responsive.css">
 
     <link rel="stylesheet" href="/css/color/color1.css">
+
+
     <link rel="stylesheet" href="#" id="colors">
 </head>
 <body>
@@ -86,6 +88,12 @@
                         <div class="logo">
                             <a href="index.html"><img src="/img/logo.png" alt="#"></a>
                         </div>
+
+                    </div>
+                    <div class="col-lg-7 col-md-9 col-12">
+                    </div>
+                    <div class="col-lg-2 col-12">
+
                     </div>
                 </div>
             </div>
@@ -100,7 +108,7 @@
         <div class="bread-inner">
             <div class="row">
                 <div class="col-12">
-                    <h2>Welcome <span th:text="${patient.getName()}"></span></h2>
+                    <h2>Meet Our Qualified Doctors</h2>
                 </div>
             </div>
         </div>
@@ -108,36 +116,55 @@
 </div>
 
 
-<section class="contact-us section">
-    <div class="container">
-        <div class="contact-info">
+<section id="team" class="team section single-page">
+    <section  class="error-page section">
+        <div class="container">
             <div class="row">
+                <div class="col-lg-6 offset-lg-3 col-12">
+                    <div class="error-inner">
+                        <form class="search-form" action="/doctor/search" method="get">
+                            <input placeholder="Search from Here" type="text" name="searchText">
+                            <button class="btn" type="submit"><i class="fa fa-search"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="container">
+        <div class="row">
+            <div th:each="doctor: ${doctors}" class="col-lg-4 col-md-6 col-12">
 
-                <div class="col-lg-4 col-12 ">
-                    <div class="single-info" onclick="redirectToBookAppointment()">
-                        <i class="icofont icofont-wall-clock"></i>
-                        <div class="content">
-                            <h3>Book Appointment</h3>
+                <div class="single-team">
+                    <div class="t-head">
+                        <img th:if="${doctor.picName != null}"
+                             th:src="@{/getImage(imageName=${doctor.getPicName()})}"/>
+                        <img th:if="${doctor.picName == null or doctor.picName.equalsIgnoreCase('null')}"
+                             th:src="@{/img.png}">
+                        <div class="t-icon">
+                            <a th:href="@{/doctor/details/{id}(id = ${doctor.getId()})}" class="btn">See Details</a>
                         </div>
+                    </div>
+                    <div class="t-bottom">
+                        <p th:text="${doctor.getSpeciality()}"></p>
+                        <h2 th:text="${doctor.getSurname()}"></h2>
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </div>
+</section>
 
-                <div class="col-lg-4 col-12">
-                    <div class="single-info" onclick="redirectToHistory()">
-                        <i class="icofont icofont-wall-clock"></i>
-                        <div class="content">
-                            <h3>My History</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-12 "  onclick="redirectToSearchDoctor()">
-                    <div class="single-info" >
-                        <i class="icofont icofont-wall-clock"></i>
-                        <div class="content">
-                            <h3>Search Doctors</h3>
-                        </div>
-                    </div>
+
+<section class="newsletter section">
+    <div class="container">
+        <div class="row ">
+            <div class="col-lg-6  col-12">
+
+                <div class="subscribe-text ">
+                    <h6>Sign up for newsletter</h6>
+                    <p class="">Cu qui soleat partiendo urbanitas. Eum aperiri indoctum eu,<br> homero alterum.</p>
                 </div>
 
             </div>
@@ -154,7 +181,8 @@
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-footer">
                         <h2>About Us</h2>
-                        <p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore dolore magna.</p>
+                        <p>Lorem ipsum dolor sit am consectetur adipisicing elit do eiusmod tempor incididunt ut labore
+                            dolore magna.</p>
 
                         <ul class="social">
                             <li><a href="#"><i class="icofont-facebook"></i></a></li>
@@ -173,19 +201,26 @@
                             <div class="col-lg-6 col-md-6 col-12">
                                 <ul>
                                     <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Home</a></li>
-                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a></li>
-                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Services</a></li>
-                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Our Cases</a></li>
-                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Other Links</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a>
+                                    </li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Services</a>
+                                    </li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Our Cases</a>
+                                    </li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Other Links</a>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="col-lg-6 col-md-6 col-12">
                                 <ul>
-                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Consuling</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Consuling</a>
+                                    </li>
                                     <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Finance</a></li>
-                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Testimonials</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Testimonials</a>
+                                    </li>
                                     <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>FAQ</a></li>
-                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Contact Us</a></li>
+                                    <li><a href="#"><i class="fa fa-caret-right" aria-hidden="true"></i>Contact Us</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -193,8 +228,20 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="single-footer">
+                        <h2>Open Hours</h2>
+                        <p>Lorem ipsum dolor sit ame consectetur adipisicing elit do eiusmod tempor incididunt.</p>
+                        <ul class="time-sidual">
+                            <li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
+                            <li class="day">Saturday <span>9.00-18.30</span></li>
+                            <li class="day">Monday - Thusday <span>9.00-15.00</span></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="single-footer">
                         <h2>Newsletter</h2>
-                        <p>subscribe to our newsletter to get allour news in your inbox.. Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
+                        <p>subscribe to our newsletter to get allour news in your inbox.. Lorem ipsum dolor sit amet,
+                            consectetur adipisicing elit,</p>
                     </div>
                 </div>
             </div>
@@ -207,7 +254,8 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-12">
                     <div class="copyright-content">
-                        <p>© Copyright 2018 | All Rights Reserved by <a href="https://www.wpthemesgrid.com" target="_blank">wpthemesgrid.com</a> </p>
+                        <p>© Copyright 2018 | All Rights Reserved by <a href="https://www.wpthemesgrid.com"
+                                                                        target="_blank">wpthemesgrid.com</a></p>
                     </div>
                 </div>
             </div>
@@ -217,7 +265,8 @@
 </footer>
 
 
-<script data-cfasync="false" src="/js/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="/js/jquery.min.js"></script>
+<script data-cfasync="false" src="/js/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+<script src="/js/jquery.min.js"></script>
 
 <script src="/js/jquery-migrate-3.0.0.js"></script>
 
@@ -245,34 +294,20 @@
 
 <script src="/js/jquery.counterup.min.js"></script>
 
+<script src="/js/steller.js"></script>
+
 <script src="/js/wow.min.js"></script>
 
 <script src="/js/jquery.magnific-popup.min.js"></script>
 
 <script src="/js/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 
-<script src="https://maps.google.com/maps/api/js?key=AIzaSyDGqTyqoPIvYxhn_Sa7ZrK5bENUWhpCo0w"></script>
-
-<script src="/js/gmaps.min.js"></script>
-
-<script src="/js/map-active.js"></script>
-<script>
-    function redirectToBookAppointment() {
-        window.location.href = "/appointments/make";
-    }
-    function redirectToHistory() {
-        window.location.href = "/patient/appointments";
-    }
-
-    function redirectToSearchDoctor() {
-        window.location.href = "/doctor/search?searchText=null";
-    }
-
-</script>
-
 <script src="/js/bootstrap.min.js"></script>
 
 <script src="/js/main.js"></script>
-<script defer="" src="/js/beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816" integrity="sha512-jGCTpDpBAYDGNYR5ztKt4BQPGef1P0giN6ZGVUi835kFF88FOmmn8jBQWNgrNd8g/Yu421NdgWhwQoaOPFflDw==" data-cf-beacon='{"rayId":"7d0557abdf433362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}' crossorigin="anonymous"></script>
+<script defer="" src="/js/beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816"
+        integrity="sha512-jGCTpDpBAYDGNYR5ztKt4BQPGef1P0giN6ZGVUi835kFF88FOmmn8jBQWNgrNd8g/Yu421NdgWhwQoaOPFflDw=="
+        data-cf-beacon='{"rayId":"7d055766b97f3362","version":"2023.4.0","r":1,"b":1,"token":"3248e93e0d6447329c4d6bcc351d5700","si":100}'
+        crossorigin="anonymous"></script>
 </body>
 </html>
