--- a/src/main/resources/templates/confirmEmail.html
+++ b/src/main/resources/templates/confirmEmail.html
@@ -105,7 +105,7 @@
                 <div class="col-lg-6">
                     <div class="login-form">
                         <h2>Eamil Here</h2>
-                        <form class="form" method="get" action="/patient/confirmation-email">
+                        <form class="form" method="get" action="/user/confirm-email">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
