--- a/src/main/resources/templates/addDepartment.html
+++ b/src/main/resources/templates/addDepartment.html
@@ -125,7 +125,7 @@
                 <div class="col-lg-6">
                     <div class="register-form">
                         <h2>Add Department</h2>
-                        <form action="/department/add" method="post">
+                        <form action="/departments/add" method="post">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
