--- a/src/main/resources/templates/passwordChangePage.html
+++ b/src/main/resources/templates/passwordChangePage.html
@@ -105,11 +105,18 @@
                 <div class="col-lg-6">
                     <div class="login-form">
                         <h2>Eamil Here</h2>
-                        <form class="form" method="get" action="/doctor/confirmation-email">
+                        <form class="form" method="post" action="/user/update-password">
+                            <input name="email" type="hidden" th:value="${email}">
+                            <input name="token" type="hidden" th:value="${token}">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <input type="text" name="email" placeholder="Your Email">
+                                        <input type="text" name="password" placeholder="Your Password">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="form-group">
+                                        <input type="text" name="passwordRepeat" placeholder="Repeat Password">
                                     </div>
                                 </div>
                                 <div class="col-12">
@@ -119,7 +126,6 @@
                                 </div>
                             </div>
                         </form>
-
                     </div>
                 </div>
             </div>
